generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("POSTGRES_URI")
}

model User {
  id        Int      @id @default(autoincrement())
  email     String   @unique
  name      String
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  followers Follow[] @relation("following")
  following Follow[] @relation("followers")
  purchases Order[]

  @@map("user")
}

model Product {
  id           Int      @id @default(autoincrement())
  serialNumber String   @unique @map("serial_number")
  name         String
  price        Int
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")
  buyers       Order[]

  @@map("product")
}

// Relation table //

model Follow {
  id          Int      @id @default(autoincrement())
  follower    User     @relation("followers", fields: [followerId], references: [id])
  followerId  Int      @map("follower_id")
  following   User     @relation("following", fields: [followingId], references: [id])
  followingId Int      @map("following_id")
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  @@map("follow")
}

model Order {
  id        Int      @id @default(autoincrement())
  buyer     User     @relation(fields: [buyerId], references: [id])
  buyerId   Int      @map("buyer_id")
  product   Product  @relation(fields: [productId], references: [id])
  productId Int      @map("product_id")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@map("order")
}
